[project]
name = "places-of-worship"  # TODO: -db at end?  Other name?
version = "0.0.6"
description = "Pull data on places of worship from various sources"
authors = [
    # TODO: Other authors?
    { name = "Jake W. Ireland", email = "jakewilliami@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.12, <4.0.0"
license = "MIT"
dependencies = [
    "osmpythontools==0.3.6",
	"requests==2.32.4",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.3",
    "ruff>=0.11.13",
]

[project.scripts]
powdb = "cli:main"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
# https://peps.python.org/pep-0008/#maximum-line-length
line-length = 80

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    "UP038",  # https://docs.astral.sh/ruff/rules/non-pep604-isinstance/
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
